...
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/standard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_standard1" />
            <Button
                android:id="@+id/standard2"
...
                android:id="@+id/single_task1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_single_task1" />
            <Button
                android:id="@+id/single_task2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_single_task2" />
            <Button
                android:id="@+id/single_task3"
...
                android:id="@+id/single_instance3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_single_instance3" />
            <Button
                android:id="@+id/reparenting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_special_reparenting" />
            <Button
                android:id="@+id/finish_on_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_special_finish_on_launch" />
            <Button
                android:id="@+id/clear_on_launch"
...
